--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 }
 
 .side {
-    color: white;
     width: 100%;
     height: 100vh;
     display: grid;
@@ -20,7 +19,6 @@ body {
 }
 
 .side .title {
-    color: white;
     font-family: monospace;
     font-size: 3.5vw;
     margin: 0 15vw;
@@ -29,10 +27,12 @@ body {
 
 #left__side {
     background-color: crimson;
+    color: black;
     z-index: 2;
 }
 
 #right__side {
     background-color: black;
+    color: crimson;
     z-index: 0;
 }
